[gd_scene load_steps=3 format=3 uid="uid://cavetid0o2xm7"]

[ext_resource type="Script" path="res://Scenes/lobby_login.gd" id="1_e1ndl"]

[sub_resource type="LabelSettings" id="LabelSettings_gy14w"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e1ndl")
lobby_screen_scene = "res://Scenes/lobby_client.tscn"

[node name="Username" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = 72.0
offset_right = 52.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "username"

[node name="Password" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = 116.0
offset_right = 50.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "password"
secret = true

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -2.0
offset_top = 37.0
offset_right = -2.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_gy14w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 167.0
offset_right = 73.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
text = "Login"

[node name="StartButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -69.0
offset_right = 60.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
text = "Start Match"

[node name="LoggedPlayersColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.0
offset_top = 80.0
offset_right = 176.0
offset_bottom = 326.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="LoggedPlayersColorRect"]
layout_mode = 0
offset_left = 28.0
offset_top = 10.0
offset_right = 323.0
offset_bottom = 229.0
text = "Players in match:"
horizontal_alignment = 1

[connection signal="text_submitted" from="Username" to="." method="_on_username_text_submitted"]
[connection signal="text_submitted" from="Password" to="." method="_on_password_text_submitted"]
[connection signal="pressed" from="LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
